# c_tensorflow

./: CMakeLists.txt  README.md  REAMDE.md  alery.pb  generate_pb_file.py  restore_pb_file.py  use_pb.c  use_pb_file.c
origin/: model.pb  original.c  restore.py
project_exp/: use_awa_pb.c
results/: alery.pb
